# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_ascii.txt  query_flow_diagram.md
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: README.md  TEST_REPORT.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_diagnostics.py  test_integration.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
chroma_db/: chroma.sqlite3
frontend/: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc  check-quality.sh  format-code.sh  frontend-changes.md  index.html  package-lock.json  package.json  script.js  style.css
